<resources>

    <string-array name="filter_options">
        <item>ALL</item>
        <item>CHECKED</item>
        <item>UNCHECKED</item>
    </string-array>

    <string-array name="page_options">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string-array name="font_family">
        <item>Default</item>
        <item>Alata</item>
        <item>Amaranth</item>
        <item>Anton</item>
        <item>Telex</item>
    </string-array>
    <string-array name="font_size">
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
    </string-array>
    <string-array name="theme">
        <item>Default(Green)</item>
        <item>Purple</item>
    </string-array>

    <string name="TodoApplication">Todo Application</string>
    <string name="TodoLists">Todo Lists</string>
    <string name="addList">Add List</string>
    <string name="search">Search items</string>
    <string name="items">Enter the items</string>
    <string name="add">Add</string>
    <string name="pageNumber">0/0</string>
    <string name="todo_lists">TODO Lists</string>
    <string name="sort_ascending_description">Ascending</string>
    <string name="sort_descending_description">Descending</string>
    <string name="project_title">Project Title</string>
    <string name="user_title">User title</string>
    <string name="user">User</string>
    <string name="u">U</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_title">Enter Your Title</string>
    <string name="title">title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="Name">Name</string>
    <string name="Title">Title</string>
    <string name="Id">Id</string>
    <string name="UserName">User Name</string>
    <string name="UserTitle">UserTitle</string>
    <string name="ProjectId">ProjectId</string>
    <string name="ProjectName">ProjectName</string>
    <string name="project">project</string>
    <string name="users">users</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="enter_list">Enter List</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Hint">Hint</string>
    <string name="create_your_account">Create Your Account!!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">ToDo!!</string>
    <string name="old_hint">Old Hint</string>
    <string name="new_hint">New Hint</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="greeting">Greeting!!</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="All_fields_are_required">All Fields are Required</string>
    <string name="Signup_successful">SignUp Successfully</string>
    <string name="Signup_failed">SignUp Failed</string>
    <string name="User_already_exists">User already exists</string>
    <string name="Password_mismatch">Password mismatch</string>
    <string name="Login_success">Login Success"</string>
    <string name="login_failed">Login Failed</string>
    <string name="update_failed">Update Failed</string>
    <string name="updated_successful">Updated Successful</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="all_fields_are_required">All Fields are Required</string>
    <string name="data">data</string>
    <string name="token">token</string>
    <string name="added_successful">Added successful</string>
    <string name="project_name">Project Name</string>
    <string name="http_192_168_1_109_8080">http://192.168.43.223:8080/</string>
    <string name="font_family">font_family</string>
    <string name="font_size">font_size</string>
    <string name="color">color</string>
    <string name="_id">_id</string>
    <string name="_email">email</string>
    <string name="project_deletion_failure">Project Deletion Failure</string>
    <string name="project_deleted">Project Deleted</string>
    <string name="project_updation_failed">Project Updation Failed</string>
    <string name="project_updated">Project Updated</string>
    <string name="description">description</string>
    <string name="created_by">created_by</string>
    <string name="additional_attributes">additional_attributes</string>
    <string name="desc">desc</string>
    <string name="removed">Removed</string>
    <string name="project_id">project_id</string>
    <string name="is_completed">is_completed</string>
    <string name="sort_order">sort_order</string>


</resources>