<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />


    <EditText
        android:id="@+id/sign_up_name"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textbox"
        android:drawablePadding="10dp"
        android:hint="@string/Name"
        android:includeFontPadding="true"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_repass"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textbox"
        android:drawablePadding="10sp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/visibility_confirm"
        android:layout_width="45dp"
        android:layout_height="51dp"
        android:layout_alignEnd="@+id/sign_up_pass"
        android:layout_alignBottom="@+id/sign_up_pass"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_tile"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textbox"
        android:drawablePadding="10sp"
        android:hint="@string/Hint"
        android:paddingLeft="15dp"
        android:paddingRight="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_hint"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textbox"
        android:drawablePadding="10sp"
        android:hint="@string/Title"
        android:paddingLeft="15dp"
        android:paddingRight="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_pass"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textbox"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/visible_icon"
        android:layout_width="45dp"
        android:layout_height="51dp"
        android:layout_alignEnd="@+id/sign_up_pass"
        android:layout_alignBottom="@+id/sign_up_pass"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textbox"
        android:hint="@string/email"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="307dp"
        android:layout_height="49dp"
        android:backgroundTint="#3F9758"
        android:text="@string/create_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <TextView
        android:id="@+id/already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>