<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/Primary">

            <ImageButton
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/menuButton"
                android:text="@string/TodoApplication"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/setting" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sideNavView"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/sideNavMenu"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:padding="16dp"
            android:background="@color/Primary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <ImageView
                android:id="@+id/logout"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/size"
                android:layout_gravity="end"
                android:src="@drawable/baseline_logout_24">

            </ImageView>

            <TextView
                android:id="@+id/profileIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/circle_border"
                android:gravity="center"
                android:text="@string/u"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileIcon"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:text="@string/user"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_below="@id/profileName"
                android:layout_alignParentStart="true"
                android:text="@string/user_title"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>


            <ImageButton
                android:id="@+id/editIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/edit_icon"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_title"
                android:textColor="@color/black"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@+id/sideNavMenu"
                android:padding="10dp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:hint="@string/enter_list"
                    android:id="@+id/addListItem"
                    android:textSize="20sp">
                </EditText>

                <ImageButton
                    android:id="@+id/addList"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_button"
                    android:layout_marginStart="130dp">
                </ImageButton>

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="29dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/sideView"
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/fontFamily1"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:entries="@array/font_family"/>
        <Spinner
            android:id="@+id/font_size"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:entries="@array/font_size"/>
        <Spinner
            android:id="@+id/theme_color"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:entries="@array/theme"/>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>